<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.longhorn.viewdvr.activity.MainActivity">

    <include layout="@layout/simple_toolbar" />

    <FrameLayout
        android:id="@+id/ac_video_fl01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ac_video_ll01"
        android:layout_below="@+id/toolbar"
        android:background="#DF000000" />

    <LinearLayout
        android:id="@+id/ac_video_ll01"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="3">

        <Button
            android:id="@+id/ac_video_bt01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/nor_video"
            tools:ignore="Suspicious0dp" />

        <Button
            android:id="@+id/ac_video_bt02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/evt_video"
            tools:ignore="Suspicious0dp" />

        <Button
            android:id="@+id/ac_video_bt03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/loc_video"
            tools:ignore="Suspicious0dp" />
    </LinearLayout>


</RelativeLayout>
